# hm

./: CMakeLists.txt  README.md
include/hm/: basic_hasher.h  benchmark.h  concept_hasher.h  hash.h  types.h
include/hm/hasher_collection/: benchmark_hasher.h  trace_hasher.h
src/: main.cc
tests/: main.cc
